--- a/main.css
+++ b/main.css
@@ -26,35 +26,38 @@
 	border-radius: 5px;
 }
 
-.pmText{
-	color: white;
-	float: left;
+.leftAmPm{
+	display: inline-block;
+	padding-left: 10%;
 }
 
-.autoText{
+.pmText, .autoText{
 	color: white;
-	float: left;
+
 }
+
 
 .amLabelFreq{
 	color: white;
 	margin: 0;
-	padding-left: 22%;
+	padding-left: 25%;
 	letter-spacing: .1em;
 }
 
 .pmLabelFreq{
 	color: white;
 	margin: 0;
-	padding-left: 22%;
+	padding-left: 25%;
 	letter-spacing: .1em;
 
 }
 
 .clockScreen{
 	background-color: #7a2313;
-	margin: 0 20% 0 20%;
+	margin: 0 20% 0 5%;
 	border-radius: 5px;
+	display: inline-block;
+	width: 50%;
 }
 
 .amPmIndic {
@@ -62,6 +65,7 @@
 	display: inline-block;
 	font-size: 3em ;
 	margin: 0;
+	padding-bottom: 5%;
 }
 
 .clockText{
